Fix toggle vertical align

--- a/client/landing/subscriptions/components/settings-popover/styles.scss
+++ b/client/landing/subscriptions/components/settings-popover/styles.scss
@@ -90,6 +90,11 @@
 	.settings-popover__notify-me-of-new-posts-toggle {
 		font-size: $font-body-small;
 		margin-bottom: 16px;
+
+		.components-form-toggle {
+			display: flex;
+			align-items: center;
+		}
 	}
 
 	.settings-popover__popout-hint {
